--- a/portfolio/src/styles/Home.css
+++ b/portfolio/src/styles/Home.css
@@ -1,7 +1,10 @@
 .home-container {
     margin-top: 60px;
-    margin-bottom: 50px;
+    margin-bottom: 0;
     padding: 30px;
+    padding-bottom: 30px;
+    min-height: calc(100vh - 60px);
+    box-sizing: border-box;
 }
 
 .hello {
@@ -27,11 +30,12 @@
 .icon-container {
     margin: 0 auto;
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     position: relative;
     width: 400px;
     height: auto;
     z-index: 1;
+    overflow: visible;
 }
 
 @keyframes breathing {
@@ -113,8 +117,9 @@
 @media (max-width: 768px) {
     .home-container {
         margin-top: 100px;
-        margin-bottom: 50px;
-        padding-bottom: 0;
+        margin-bottom: 0;
+        padding-bottom: 30px;
+        min-height: calc(100vh - 100px);
     }
 
     .hello {
